Deep Learning MLP Algorithm Basic

--- a/02_Vector&Matrix/vector_matrix.ipynb
+++ b/02_Vector&Matrix/vector_matrix.ipynb
@@ -179,16 +179,22 @@
     "    - 덧셈, 뺄셈 ( O )\n",
     "        - 조건 : 같은모양\n",
     "            - 같은 인덱스 위치끼리 계산\n",
-    "        - > $X \\pm Y = \\displaystyle\\sum_{i=1}^{m}\\sum_{j=1}^{n} {x_{ij} \\pm y_{ij}}$\n",
+    "        - > $\\mathbb{X}_{i \\times j} \\pm \\mathbb{Y}_{i \\times j} = \\begin{bmatrix} x_{11} & \\cdots & x_{1j} \\\\ \\vdots && \\vdots \\\\ x_{i1} & \\cdots & x_{ij} \\end{bmatrix} + \\begin{bmatrix} y_{11} & \\cdots & y_{1j} \\\\ \\vdots && \\vdots \\\\ y_{i1} & \\cdots & y_{ij} \\end{bmatrix}$\n",
+    "        - > $\\qquad\\qquad\\quad\\,= \\begin{bmatrix} x_{11} + y_{11} & \\cdots & x_{ij} + y_{1j} \\\\ \\vdots && \\vdots \\\\ x_{i1} + y_{i1} & \\cdots & x_{ij} + y_{ij} \\end{bmatrix}$ \n",
+    "\n",
     "    - 성분 곱, 스칼라 곱 ( O )\n",
     "        - 조건 : 같은모양\n",
     "            - 같은 인덱스 위치끼리 계산\n",
-    "        - > $X \\odot Y = \\displaystyle\\sum_{i=1}^{m}\\sum_{j=1}^{n} {x_{ij} \\times y_{ij}}$\n",
+    "        - > $\\mathbb{X}_{i \\times j} \\odot \\mathbb{Y}_{i \\times j} = \\begin{bmatrix} x_{11} & \\cdots & x_{1j} \\\\ \\vdots && \\vdots \\\\ x_{i1} & \\cdots & x_{ij} \\end{bmatrix} \\odot \\begin{bmatrix} y_{11} & \\cdots & y_{1j} \\\\ \\vdots && \\vdots \\\\ y_{i1} & \\cdots & y_{ij} \\end{bmatrix}$\n",
+    "        - > $\\qquad\\qquad\\quad\\,= \\begin{bmatrix} x_{11}y_{11} & \\cdots & x_{ij}y_{1j} \\\\ \\vdots && \\vdots \\\\ x_{i1}y_{i1} & \\cdots & x_{ij}y_{ij} \\end{bmatrix}$ \n",
+    "        \n",
     "    - 행렬의 곱셈 = 내적 (dot product)\n",
     "        - 조건 : 행렬 $X$ 의 열 크기와 행렬 $Y$ 의 행의 크기가 같아야 한다\n",
-    "        - > $X \\cdot Y = \\displaystyle\\sum_{k}^{ } {x_{ik} \\times y_{kj}}$\n",
     "            - 행렬의 내적은 계산의 순서에 따라 결과값이 달라지며 계산이 불가능하기도 하다\n",
-    "            - >> $X \\cdot Y \\neq Y \\cdot X$"
+    "            - >> $X \\cdot Y \\neq Y \\cdot X$\n",
+    "        - > $\\displaystyle\\mathbb{X}_{m \\times n} \\cdot \\mathbb{Y}_{n \\times m} = \\begin{bmatrix} x_{11} & \\cdots&\\cdots & x_{1n} \\\\ \\vdots &&& \\vdots \\\\ x_{m1} & \\cdots&\\cdots & x_{mn} \\end{bmatrix}_{m \\times n} \\cdot \\begin{bmatrix} y_{11} & \\cdots & y_{1m} \\\\ \\vdots && \\vdots \\\\ \\vdots && \\vdots \\\\ y_{n1} & \\cdots & y_{nm} \\end{bmatrix}_{n \\times m}$\n",
+    "        - > $\\qquad\\qquad\\quad\\;\\;= {\\begin{bmatrix} x_{11}y_{11} \\; + \\; \\cdots \\; + \\; x_{1n}y_{n1} \\\\ \\vdots \\qquad \\cdots \\qquad \\vdots \\\\ x_{m1}y_{1m} \\; + \\; \\cdots \\; + \\; x_{mn}y_{nm}\\end{bmatrix}}_{m \\times m}$\n",
+    "        - > $\\qquad\\qquad\\quad\\;\\;= \\displaystyle\\sum_{k}^{ } {x_{ik} \\times y_{kj}}$"
    ]
   },
   {
@@ -308,10 +314,10 @@
     "            - 해를 구할 수 있을 떄\n",
     "        - 풀이 방식\n",
     "            - 연립방정식과 달리 행이 더 크므로 방정식 자체를 푸는건 불가능\n",
-    "                > $\\mathbb{X} \\; \\vec{\\beta} \\; \\neq \\; \\vec{y} \\; \\approx \\; \\hat{y} $\n",
-    "                >> $\\rightarrow(\\mathbb{X}^+)\\mathbb{X}\\vec{\\beta} \\approx (\\mathbb{X}^+)\\hat{y}$  \n",
-    "                >> $\\rightarrow\\vec{\\beta} \\approx \\mathbb{X}^+\\hat{y}$  \n",
-    "                >> $\\rightarrow\\vec{\\beta} \\approx \\mathbb{X}^+\\hat{y}$  \n",
+    "                > $\\mathbb{X} \\; \\vec{\\beta} \\; = \\; \\hat{y} \\; \\approx(\\neq) \\; \\vec{y}  $\n",
+    "                >> $\\rightarrow(\\mathbb{X}^+)\\mathbb{X}\\vec{\\beta} \\; = \\; (\\mathbb{X}^+)\\hat{y}$  \n",
+    "                >> $\\rightarrow\\vec{\\beta} \\; = \\; \\mathbb{X}^+\\hat{y}$  \n",
+    "                >> $\\rightarrow\\vec{\\beta} \\; = \\; \\mathbb{X}^+\\hat{y}$  \n",
     "                - $ m \\leq n $ 일때 (미지수 $\\leq$ 식)\n",
     "                    - $\\mathbb{A}^+\\mathbb{A} = \\mathbb{I}$ \n",
     "                    - $\\mathbb{A}^+ = (\\mathbb{A}^\\top\\mathbb{A})^{-1}\\mathbb{A}^\\top$\n",
