pre_course - Optimization

--- a/05_DL Basic/DL_Basic.ipynb
+++ b/05_DL Basic/DL_Basic.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 목차\n",
+    "1. DL Basic Terms\n",
+    "2. Historical DL trand review\n",
+    "3. Neural Network structure (MLP)\n",
+    "4. Optimization (최적화)\n",
+    "5. Gradient Descent Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 01 : DL Basic Terms"
    ]
   },
@@ -11,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01 - Introduction\n",
+    "## -01 : Introduction\n",
     "- Implementation skills (tools)\n",
     "    - tensorflow\n",
     "    - pytorch\n",
@@ -26,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02 - Contents\n",
+    "## -02 : Contents\n",
     "- 방향성\n",
     "    - 각 주제의 간략한 설명\n",
     "    - 해당 주제의 논문들을 찾아가는 방법\n",
@@ -47,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03 - 인공지능 분류\n",
+    "## -03 : 인공지능 분류\n",
     "- Altificial Inteligence (AI) (인공지능) : 인간의 지능을 모방하는 것\n",
     "    - Machine Learing (ML) (기계학습) : 데이터 중심 접근법 \n",
     "        - Deep Learing (DL) (딥러닝) : 인공 신경망"
@@ -57,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04 - Deep Learing Key Conmponents\n",
+    "## -04 : Deep Learing Key Conmponents\n",
     "- 새로운 논문과 연구를 바라볼떄 이 네가지를 기준으로 바라보자\n",
     "    - The *Data* that the model can learn from : \n",
     "    - The *Model* how to transfrom the data :\n",
@@ -69,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 04_01 : DATA\n",
+    "### _01 : DATA\n",
     "- Data depend on the type of the problem to slove\n",
     "    - Classification\n",
     "    - Semantic Segmentation : 각 이미지의 픽셀별로 분류하는것\n",
@@ -82,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 04_02 : Model\n",
+    "### _02 : Model\n",
     "- 이미지, 단어, 텍스트 등을 원하는 형태의 Label로 바꿔주는 도구\n",
     "    - 모델의 성징에 따라서 결과가 달라지고 그 안에 다양한 테크닉이 있음\n",
     "        - EX\n",
@@ -93,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 04_03 : Loss function\n",
+    "### _03 : Loss function\n",
     "- 이루고자 하는것의 근사치\n",
     "- 모델과 데이터가 절해져있을때 이 모델을 어떻게 학습할지 여부\n",
     "- 해당 loss Function 을 통상적이라는 이유로 무작정 사용하는것이 아닌 사용되는 이유와 필요시 다른 loss Function 을 적용할 수 있어야 한다\n",
@@ -111,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 04_04 : optimization Algorithm (최적화 방법)\n",
+    "### _04 : optimization Algorithm (최적화 방법)\n",
     "- 데이터, 모델, loss func 가 주어져있을때 네트워크를 어떻게 줄일지 고민하는 것\n",
     "- 또한 한번도 보지못한 테스트 데이터에서도 잘 동작할 수 있도록 하는 것\n",
     "\n",
@@ -130,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 02 : Historical DL Trand Review\n",
+    "# 02 : Historical DL trand review\n",
     "- 2012 - AlexNet\n",
     "- 2013 - DQN\n",
     "- 2014 - Encoder / Decoder / Adam\n",
@@ -146,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 03 : Neral Network (MLP)\n",
+    "# 03 : Neral Network structure (MLP)\n",
     "- Neural network are computing system veguely inspired by the biological neural networks that constitute animal brains\n",
     "    - 신경망은 동물 뇌를 구성하는 생물학적 신경 네트워크에서 영감을 얻은 컴퓨팅 시스템입니다.\n",
     "- Neural networks are function approximators that stack affine transformations followed by nonlinear transformations\n",
@@ -158,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01 - Linear Neural Networks"
+    "## -01 : Linear Neural Networks"
    ]
   },
   {
@@ -174,32 +186,35 @@
     "        - so, find $\\vec{w} \\; \\& \\; \\vec{b}$\n",
     "\n",
     "        - Partial deivative \n",
-    "             > $\\displaystyle{\\frac{\\partial{\\mathcal{L}}}{\\partial{w}} = \\frac{\\partial{}}{\\partial{w}}\\sum_{i=1}^N(y_i \\; - \\; \\hat{y}_i)^2}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\partial{w}}\\frac{1}{N}\\sum_{i=1}^N(y_i \\; - \\; wx_i \\; - \\; b)^2}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\partial{w}}\\frac{1}{N}\\sum_{i=1}^N(y_i^2 \\; -2x_iy_iw \\; -2by_i \\; + x_i^2w^2 \\; + 2bx_iw \\; + b^2)}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\cancel{\\partial{w}}}\\frac{1}{N}\\sum_{i=1}^N(\\cancel{y_i^2} \\; -2x_iy_i\\cancel{w} \\; \\cancel{-2by_i} \\; + 2 \\times x_i^2\\cancel{w^2} \\times w \\; + 2bx_i\\cancel{w} \\; + \\cancel{b^2})}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{1}{N}\\sum_{i=1}^N(-2y_i \\; + 2x_iw \\; + 2b)x_i}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{1}{N}\\sum_{i=1}^N-2(y_i \\; - wx_i \\; - b)x_i}$\n",
+    "             > $\\displaystyle{\\frac{\\partial{\\mathcal{L}}}{\\partial{w}} = \\frac{\\partial{}}{\\partial{w}}{\\frac{1}{N}}\\sum_{i=1}^N(y_i \\; - \\; \\hat{y}_i)^2}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\partial{w}}\\frac{1}{N}\\sum_{i=1}^N(y_i \\; - \\; wx_i \\; - \\; b)^2}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\partial{w}}\\frac{1}{N}\\sum_{i=1}^N(y_i^2 \\; -2x_iy_iw \\; -2by_i \\; + x_i^2w^2 \\; + 2bx_iw \\; + b^2)}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\cancel{\\partial{w}}}\\frac{1}{N}\\sum_{i=1}^N(\\cancel{y_i^2} \\; -2x_iy_i\\cancel{w} \\; \\cancel{-2by_i} \\; + 2 \\times x_i^2\\cancel{w^2} \\times w \\; + 2bx_i\\cancel{w} \\; + \\cancel{b^2})}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{1}{N}\\sum_{i=1}^N(-2y_i \\; + 2x_iw \\; + 2b)x_i}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{1}{N}\\sum_{i=1}^N-2(y_i \\; - wx_i \\; - b)x_i}$  \n",
     "\n",
-    "             > $\\displaystyle{\\frac{\\partial{\\mathcal{L}}}{\\partial{b}} = \\frac{\\partial{}}{\\partial{b}}\\sum_{i=1}^N(y_i \\; - \\; \\hat{y}_i)^2}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\partial{b}}\\frac{1}{N}\\sum_{i=1}^N(y_i \\; - \\; wx_i \\; - \\; b)^2}\\\\$\n",
-    "             > $\\displaystyle{\\qquad = \\frac{1}{N}\\sum_{i=1}^N-2(y_i \\; - wx_i \\; - b)}$\n",
+    "             > $\\displaystyle{\\frac{\\partial{\\mathcal{L}}}{\\partial{b}} = \\frac{\\partial{}}{\\partial{b}}\\sum_{i=1}^N(y_i \\; - \\; \\hat{y}_i)^2}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{\\partial{}}{\\partial{b}}\\frac{1}{N}\\sum_{i=1}^N(y_i \\; - \\; wx_i \\; - \\; b)^2}\\\\$  \n",
+    "             > $\\displaystyle{\\qquad = \\frac{1}{N}\\sum_{i=1}^N-2(y_i \\; - wx_i \\; - b)}$  \n",
     "\n",
-    "             > $\\displaystyle{w \\leftarrow w - \\eta\\frac{\\partial{\\mathcal{L}}}{\\partial{w}}} \\\\$ \n",
-    "             > $\\displaystyle{b \\leftarrow b - \\eta\\frac{\\partial{\\mathcal{L}}}{\\partial{b}}} \\\\$\n",
-    "             >> - $\\displaystyle{\\leftarrow}$ : Update\n",
-    "             >> -  $\\\\\\displaystyle{\\eta}$ : Stepsize (learning rate)\n",
+    "             > $\\displaystyle{w \\leftarrow w - \\eta\\frac{\\partial{\\mathcal{L}}}{\\partial{w}}} \\\\$  \n",
+    "             > $\\displaystyle{b \\leftarrow b - \\eta\\frac{\\partial{\\mathcal{L}}}{\\partial{b}}} \\\\$  \n",
+    "             >> - $\\displaystyle{\\leftarrow}$ : Update  \n",
+    "             >> -  $\\\\\\displaystyle{\\eta}$ : Stepsize (learning rate)  \n",
     "\n",
     "- Of course, we cna handel multi dimensional input and out put\n",
     "\n",
-    "    > $\\displaystyle{\\mathbb{Y}_{m \\times n} \\; = \\; \\mathbb{X}_{m \\times i} \\cdot \\mathbb{W}^T_{i \\times n} + \\mathbb{B}_{m \\times n}} \\\\$\n",
-    "    > $\\displaystyle{\\qquad\\qquad = \\mathbb{X}_{m \\times i}\\overset{\\{\\mathbb{W}_{i \\times n}\\\\,\\mathbb{b}\\}}{\\to}\\mathbb{Y}_{m \\times n}}$\n",
+    "    > $\\displaystyle{\\mathbb{Y}_{m \\times n} \\; = \\; \\mathbb{X}_{m \\times i} \\cdot \\mathbb{W}^T_{i \\times n} + \\mathbb{B}_{m \\times n}} \\\\$  \n",
+    "    > $\\displaystyle{\\qquad\\qquad = \\mathbb{X}_{m \\times i}\\overset{\\{\\mathbb{W}_{i \\times n}\\\\,\\mathbb{b}\\}}{\\to}\\mathbb{Y}_{m \\times n}}$  \n",
     "\n",
     "    - But, What if we stack more ?\n",
     "        - We need nonlinearity (활성함수를 통한 변환)\n",
     "            - ReLU\n",
+    "                > 양수 = 그대로, 음수 = 0\n",
     "            - Sigmoid\n",
+    "                > $\\displaystyle{\\frac{1}{1 \\; + \\; e^{-x}}}$\n",
     "            - Hyperbolic Tangent\n",
+    "                > $\\displaystyle{\\frac{e^x \\; - \\; e^{-x}}{e^x \\; + \\; e^{-x}}}$\n",
     "\n",
     "    - Deep Learning 이 강력한 이유?\n",
     "        - There is a single hidden layer feedforward network that approximates any measureable function to any desired dgree of accuracy on some compact set K.\n",
@@ -208,11 +223,120 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 04 : Optimization (최적화)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -01 : Gradient Descent (경사하강법)\n",
+    "- First-order iterative optimization alorithm for finding a local minimum of a differentiable function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -02 : Important Concept in *Optimization*\n",
+    "- Generalization\n",
+    "- Under-fitting vs Over-fitting\n",
+    "- Cross Validation\n",
+    "- Bias-variance trade-off\n",
+    "- Bosstrapping\n",
+    "- Bagging and boosting "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _01 : Generalization (일반화)\n",
+    "\n",
+    "- Generalization Gap\n",
+    "    - Train set Error 와 Test set Error 의 갭\n",
+    "    - Generalization gap 이 적다 : 학습데이터와 비슷한 수준의 실제 데이터화 결과를 보여줄 것이다 예측 가능"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _02 : Under vs Over fitting\n",
+    "- Over fitting\n",
+    "    - Train 에서 잘 동작 , Test 에서 잘 동작하지 않음\n",
+    "- Under fitting\n",
+    "    - 학습이 부족한 상황"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _03 : Cross-validation\n",
+    "- Cross validation is a model validation technique for assessing how the model will generalize to an idependent (test) data set\n",
+    "\n",
+    "- EX module\n",
+    "    > from sklearn.model_selection import train_test_split  \n",
+    "    > from sklearn.model_selection import KFold  \n",
+    "    > from sklearn.model_selection import StratifiedKFold  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _04 : Bias & Variance (trade off)\n",
+    "\n",
+    "- Bias\n",
+    "    - 평균적으로 보았을때 True 에 근접한 정도  \n",
+    "\n",
+    "- Variace\n",
+    "    - 복작성\n",
+    "    - 변화정도  \n",
+    "\n",
+    "- Bias & Variance Trade-off\n",
+    "    - Given $\\mathbb{D} = \\{(x_i, \\; t_i)\\}_{i=1}^{N}$, where $t \\; = \\; f(x) + \\epsilon{} \\;$ and $\\; \\epsilon{} \\;$ ~ $\\; \\mathbb{N}(0, \\; \\sigma{}^2) $  \n",
+    "    - We can derive that what we are minimizing ( $cost$ ) can be decomposed into three different parts : $bias^2, \\; variance,$ and $noise$\n",
+    "        - 학습 데이터에 노이즈가 포함되어 있을때 노이즈가 껴있는 타겟데이터를 미니마이즈하는것은 3가지 가 연관되어 있으며 상호보완적인 관계로 하나를 줄이면 하나는 늘어날 수 밖에 없다\n",
+    "            - ex. Precision vs Recall\n",
+    "        > $\\displaystyle{\\underbrace{\\mathbb{E}[(t-\\hat{f}^2)]}_{Cost} \\; = \\; E[(t \\; - \\; f \\; + \\; f \\; - \\; \\hat{f})^2]} \\\\$  \n",
+    "        > $\\displaystyle{\\qquad\\qquad = \\quad \\cdots} \\\\$  \n",
+    "        > $\\displaystyle{\\qquad\\qquad = \\quad \\underbrace{\\mathbb{E}[(f \\; - \\; \\mathbb{E}[\\hat{f}]^2)^2]}_{bias^2} \\; + \\; \\underbrace{\\mathbb{E}[(\\mathbb{E}[\\hat{f}]^2 \\; - \\; \\hat{f})^2]}_{variance} \\; + \\; \\underbrace{\\mathbb{E}[\\epsilon{}]}_{noise}} \\\\$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _05 : Bootstrapping\n",
+    "- Bootstrapping is any test or metric that uses random sampling with replacement\n",
+    "- 고정되어있는 학습데이터에서 서브 샘플링을 통해서 학습데이터를 여러개를 생성하여 여러 모델을 만들어 학습을 진행하는 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _06 : Bagging vs Boosting\n",
+    "- Bagging (*B*ootstrapping *agg*regat*ing*)\n",
+    "    - Multiple models are being trained with bootstrapping\n",
+    "    - ex) Base classifier are fitted on random subset where indiviual predictions are aggregated (voting or averaging)\n",
+    "    - 앙상블 (Ensemble)\n",
+    "- Boosting\n",
+    "    - It focuses on those specific training samples that are hard to classify.\n",
+    "    - A strong model is built bycombining weak learner in sequence where each learner from the mistakes of the previous weak learner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 05  : Gradient Descent Method"
+   ]
   },
   {
    "cell_type": "code",
