Gradient Descent Mehtod

--- a/05_DL Basic/DL_Basic.ipynb
+++ b/05_DL Basic/DL_Basic.ipynb
@@ -202,7 +202,7 @@
     "             >> - $\\displaystyle{\\leftarrow}$ : Update  \n",
     "             >> -  $\\\\\\displaystyle{\\eta}$ : Stepsize (learning rate)  \n",
     "\n",
-    "- Of course, we cna handel multi dimensional input and out put\n",
+    "- Of course, we can handel multi dimensional input and out put\n",
     "\n",
     "    > $\\displaystyle{\\mathbb{Y}_{m \\times n} \\; = \\; \\mathbb{X}_{m \\times i} \\cdot \\mathbb{W}^T_{i \\times n} + \\mathbb{B}_{m \\times n}} \\\\$  \n",
     "    > $\\displaystyle{\\qquad\\qquad = \\mathbb{X}_{m \\times i}\\overset{\\{\\mathbb{W}_{i \\times n}\\\\,\\mathbb{b}\\}}{\\to}\\mathbb{Y}_{m \\times n}}$  \n",
@@ -335,7 +335,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 05  : Gradient Descent Method"
+    "# 05  : Gradient Descent Method\n",
+    "\n",
+    "- Stochastic gradient descent\n",
+    "    - Update with the gradient computed from a single sample\n",
+    "\n",
+    "- Mini-batch gradient descent\n",
+    "    - UPdate with the gradient computed form a subset of data\n",
+    "\n",
+    "- Batch gradient descent\n",
+    "    - Update with the gradient computed from whole data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -01 : Batch-size Matters\n",
+    "\n",
+    "- It has been observes in practice that when using a larger bstch there is a degradation in the quality of the model, as measured by its ability to generalized\n",
+    "\n",
+    "- We ... present numerical evidence that suepports the view that large batch methods tend to converge to *sharp minimizers* of the training and testing functions. In contrast, small-batch methods consistently converge to *flat minimizers* ... this is due to the inherent noise in the gradient estimation.\n",
+    "    - 경사하강법의 특성(노이즈) 에 의해 Flat Mininum 는 train 과 test 의 결과가 비슷하게 나오는경향이 있다\n",
+    "    - Sharp Minimum 은 차이가 크다\n",
+    "        - Generalize performance 차이가 있다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -02 : Gradient Descent Optimizer (경사하강법 최적화)\n",
+    "\n",
+    "- (Stochastic) Gradient descent\n",
+    "- Momentum\n",
+    "- Nesterov accelerated Gradient\n",
+    "- Adagrad\n",
+    "- Adadelta\n",
+    "- RMSprop\n",
+    "- Adam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _01 : (Stochastic) Gradient Descent\n",
+    "\n",
+    "- 기존의 형태\n",
+    "    > $W_{t+1} \\; \\leftarrow \\; W_t \\; - \\eta{}g_t$  \n",
+    "    > $\\qquad\\qquad\\qquad\\quad \\downarrow \\;\\; \\searrow$  \n",
+    "    > $\\quad\\; Learning rate \\quad Gradient$  \n",
+    "    - 문제점 : Learning rate에 따른 학습의 영향이 너무 컷다\n",
+    "        - 해결방안 : Optimization technique 개발 (ex. Momentum : 학습 관성적용)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _02 : Momentom\n",
+    "\n",
+    "- 기존의 learning rate 에 의존한 Gradient descent 학습법의 문제점을 개선하기 위해 고안됨\n",
+    "- 관성을 이용\n",
+    "    - 기울기에 가속도를 부여 : Learning rate 를 점진적을 증가 (관성)\n",
+    "        > $\\underline{a_{t+1}} \\; \\leftarrow \\; \\underline{\\beta{}}a_t \\; + \\; \\underline{g_t} \\; \\cdots \\; Gradient$  \n",
+    "        > $\\vdots \\qquad\\qquad \\ddots$  \n",
+    "        > $Accumulation \\;\\;  momentum $  \n",
+    "        >> $W_{t+1} \\; \\leftarrow \\; W_t \\; - \\eta{}\\underline{a_t}$  \n",
+    "        >> 진동을 하는 경향이 있지만 잘 학습하는 경향을 보임\n",
+    "        - 문제점 : 지난 학습결과에 대한 Momentum 으로 관성이 과대해져 최저점을 지나치고 진동하는 경우가 자주 발생\n",
+    "            - 해결방안 : Momentum 적용시점 변경 (ex. Nestrov Accelerated Gradient)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _03 : Nesterov Accelerated Gradient\n",
+    "\n",
+    "- Momentum 의 Learing rate 의 가속기능때문에 진동이 증가하는 현상을 감쇄하기 위해 고안됨\n",
+    "    - Momentum : t+1 의 momentum 을 t 번째에서 선정\n",
+    "    - Nesterov accelerated Gradient : t+1 의 mometum dmf t+1 번째의 위치에서 선정\n",
+    "        > $a_{t+1} \\; \\leftarrow \\beta{}a_t \\; + \\; \\underbrace{\\nabla{}\\mathcal{L}(W_t \\; - \\; \\eta{}\\beta{}a_t)}_{Lookahead gradient}$  \n",
+    "        >> $W_{t+1} \\; \\leftarrow W_t \\; - \\; \\eta{}a_{t+1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _04 : Adagrad\n",
+    "\n",
+    "- *Adagrad* adapts the learning rate, performing larger ipdates for inrequent and smaller updates for frequent parameters.  \n",
+    "    - 각각의 파라미터의 변화정도를 저장하여 많이 변화한것은 적게 변환시키고 , 적게 변화한것은 많이 변화시켜가는것\n",
+    "        > $\\displaystyle{W_{t+1} \\; = \\; W_t \\; - \\; \\frac{\\eta{}}{\\sqrt{\\underbrace{G_t}_{Sum \\; of \\; gradient \\; squares} \\; + \\; \\underbrace{\\epsilon{}}_{for \\; numerical \\; stability}}}g_t}$  \n",
+    "        - 문제점 : 학습을 진행하면 할 수록 $\\underbrace{G_t}_{Sum \\; of \\; gradient \\; squares}$ 가 증가하여 학습이 중단되는 현상이 발생하게 된다\n",
+    "            - 해결방안 : $G_t$ 의 과대 증가 방지 (ex. Adadelta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _05 : Adadelta\n",
+    "\n",
+    "- *Adadelta* extends *Adagrad* to reduce its monotonically decreasing the learning rate restrcing the accumulation window\n",
+    "    - Adagrad 의 계속해서 증가하는 $G_t$ 를 방지\n",
+    "    - 문제점 : 묶음(Sum of gradient squares)로써 가 아니라면 window size 만큼의 파라미터 정보를 갖고있어야 하므로 이것만으로도 데이터가 지나치게 방대해져 버린다\n",
+    "        -  $\\gamma{}$ 를 사용하여 대략적인 평균값을 저장한다\n",
+    "    - 특징 : Learning rate 가 없음\n",
+    "        - 튜닝이 가능한 요소가 많지 않기 때문에 자주 사용되지 않음\n",
+    "            > $ \\displaystyle{\\quad \\underbrace{G_t}_{EMA \\; of \\; gradient \\; squares} \\; = \\; \\gamma{}G_{t-1} \\; + \\; (1 \\; - \\; \\gamma{})g^2}$ : 대략적인 평균값?  \n",
+    "            >> $ \\displaystyle{\\qquad\\qquad W_{t+1} \\;\\qquad\\qquad = \\; W_t \\; - \\; \\frac{\\sqrt{H_{t-1} \\; + \\; \\epsilon{}}}{\\sqrt{\\underline{G_t} \\; + \\; \\epsilon{}}}g_t}$  \n",
+    "            >> $ \\displaystyle{\\quad \\underbrace{H_t}_{EMA \\; of \\; difference \\; squares} \\; = \\; \\gamma{}H_{t-1} \\; + \\; (1 \\; - \\; \\gamma{})(\\Delta{}W_t)^2}$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _06 : RMSprop\n",
+    "\n",
+    "- *RMSprop* is an unpublished, adaptive learning rate method propsed by Geoff Hinton in his lecture\n",
+    "    - 별도의 논문은 없고 실험적으로 집러닝 렉쳐에서 좋은 결과를 나타내어 유행이 되었던 학습방법\n",
+    "        > $ \\displaystyle{\\underbrace{G_t}_{EMA \\; of \\; gradeint \\; squares} \\; = \\; \\gamma{}G_{t-1} \\; + \\; (1 \\; - \\; \\gamma{})g^2t}$  \n",
+    "        >> $ \\displaystyle{\\qquad\\quad W_{t+1} \\quad\\quad\\; = \\; W_t \\; - \\; \\frac{\\overbrace{\\eta{}}^{step \\; size}}{\\sqrt{\\underline{G_t} \\; + \\; \\epsilon{}}}}$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### _07 : Adam\n",
+    "\n",
+    "- Adaptive Moment Estimaation (Adam) leverages both past gradients and squared gradients\n",
+    "    - Adam effectively combines momentum with adaptive learning rate approach\n",
+    "        > $ \\displaystyle{\\qquad\\;\\underbrace{m_t}_{momentum} \\qquad\\;\\; = \\; \\beta{}_1m_{t=1} \\; + \\; (1 \\; - \\; \\beta{}_1)g_t}$  \n",
+    "        > $ \\displaystyle{\\underbrace{v_t}_{EMA \\; of \\; gradient \\; squares} \\; = \\; \\beta{}_2v_{t-1} \\; + \\; (1 \\; - \\; \\beta{}_2)g^2_t}$  \n",
+    "        >> $ \\displaystyle{W_{t+1} \\; = \\; W_t \\; - \\; \\frac{\\overbrace{\\eta{}}^{step \\; size}}{\\sqrt{\\underline{v_t} \\; + \\epsilon{}}}\\frac{\\sqrt{1 \\; - \\; \\beta{}^t_2}}{1 \\; - \\; \\beta{}^t_1}\\underline{m_t}}$  \n",
+    "        >>> $ ※ \\; default \\; \\epsilon{} \\:: 10^{-7}$  "
    ]
   },
   {
