--- a/05_DL Basic/DL_Basic.ipynb
+++ b/05_DL Basic/DL_Basic.ipynb
@@ -478,11 +478,157 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 06 : Regularization\n",
+    "\n",
+    "- 규제화\n",
+    "    - 학습에 방해되도록 규제를 거는 것\n",
+    "\n",
+    "- 목적\n",
+    "    - Generalization 이 잘 되도록 하는것\n",
+    "    - Train Function 의 결과가 Test set 에서도 잘 적용되도록 하는것\n",
+    "\n",
+    "- 종류\n",
+    "    - Early Stopping\n",
+    "    - Parameter norm penalty\n",
+    "    - Data augmentation\n",
+    "    - Noise robustness\n",
+    "    - Label smoothing\n",
+    "    - Dropout\n",
+    "    - Batch normalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -01 : Early Stopping\n",
+    "\n",
+    "- 적용 목적\n",
+    "    - Generalization 이 잘 되도록 조기에 학습을 종료하는 기능\n",
+    "\n",
+    "        <img src='../image/earlystopping_02.jpeg' width=400>\n",
+    "\n",
+    "    - 과도한 학습은 Train set에 대한 성능에 좋은영향을 주지만 일정수준이상의 학습은 Test(실제)와 간극이 발생하게 된다 (Over fitting) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -02 : Parameter Norm Penalty\n",
+    "\n",
+    "- It adds smoothness to the function space\n",
+    "\n",
+    "    - 의미1 : 뉴럴 네트워크의 함수를 최대한 부드러운 함수로 만들자\n",
+    "\n",
+    "    - 의미2 : 부드러운 함수일 수록 Generalization performance 가 높을 것이다\n",
+    "\n",
+    "        - 뉴럴 네트워크 파라미터가 너무 커지지않도록 하는것 (대신 깊어지도록)\n",
+    "\n",
+    "            > $\\displaystyle{Total \\; cost \\; = \\; Loss \\; (\\; D\\; \\;; \\; W \\; ) \\; + \\underbrace{\\frac{\\alpha{}}{2}||W^2||_2}_{Parameter \\; Norm \\; Penalty}}$\n",
+    "\n",
+    "            - 식 뜻 : 네트워크 파라미터를 다 제곱 후 더한 값이 작으면 작을 수록 좋다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -03 : Data Augmentation\n",
+    "\n",
+    "- More data are always welcomedgfh\n",
+    "    - 기존의 머신러닝에서는 많은 데이터가 있더라도 모든 데이터에 대해 표현의 방법에 한계가 있었으나, 딥러닝에서는 그 한계가 상대적으로 많이 줄고 표현력이 늘었기에 많은 양의 데이터일 수록 더욱 효과적이다\n",
+    "    - 반대로 표현하면 적은양의 데이터일 경우 기존의 머신러닝 알고리즘을 활용하는것이 더 효과적일 수 있다\n",
+    "\n",
+    "        <img src='../image/data_agmentation_01.jpeg' width=700>\n",
+    "        \n",
+    "\n",
+    "\n",
+    "- However, in most cases, training data are given in advance\n",
+    "    - 하지만, 많은 경우에서 train 데이터의 양은 한정적으로 제공된다\n",
+    "    \n",
+    "\n",
+    "- In such cases, we need data augmentation\n",
+    "    - 이러한 경우 우리는 *Data Agumentation* 이 필요하다\n",
+    "        - 예시 -1 )\n",
+    "            - 기존의 데이터를 지지고 볶아서 새로운 데이터(label 이 변환되지 않는 한도 내에서)를 생성하여 부족한 데이터를 보충한다\n",
+    "            \n",
+    "                <img src='../image/data_agmentation_02.jpeg' width=300>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -04 : Noise Robustness\n",
+    "\n",
+    "- 수행 방법\n",
+    "    - Add random noises inputs or weights\n",
+    "        - 데이터와 뉴럴네트워크 $w$ 에도 노이즈 값을 삽이하여 학습을 진행\n",
+    "            - 뉴럴 네트워크를 학습시킬때 노이즈 값을 통해 학습을 흔들어 주면 실험적으로 성능향상이 되는 경향을 보여왔었다\n",
+    "                - 왜 잘되는지에 대해서는 의문모름\n",
+    "\n",
+    "                    <img src='../image/noise_robustness_01.jpeg' width=400>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -05 : Label Smoothing\n",
+    "\n",
+    "- Mix-up constructs augmented training examples by mixing both input and output of two randomly selcted training data\n",
+    "    - train 단계의 학습데이터를 뽑아서 섞어주는 것\n",
+    "    - 분류의 경계를 모호하게 하는것\n",
+    "\n",
+    "        <img src='../image/label_smothing_01.jpeg' height=200>  <img src='../image/label_smothing_02.jpeg' height=200>\n",
+    "\n",
+    "- 목적\n",
+    "    - 분류문제에서 데이터가 한정적이고 더이상 데이터를 얻기 어려울때 활용하기 좋음\n",
+    "        - *어떻게 활용되고 어떤점에서 좋은건지 솔직히 잘 이해가 안됨*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -06 : Dropout\n",
+    "\n",
+    "- 뉴럴네트워크의 특정 노드의 웨이트를 0으로 변경하는것\n",
+    "    - In each forward pass, randomly set some neurons to zero\n",
+    "\n",
+    "        <img src='../image/dropout_01.jpeg' height=200>\n",
+    "\n",
+    "- 목적\n",
+    "    - 각각의 뉴런들이 robustenss(견고해) 진다고 생각할 수 있다?\n",
+    "        - 뭔말이야 이게 설명 개같네\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -07 : Batch Normalization\n",
+    "\n",
+    "- Batch normalization compute the empirical mean and variance independently for each dimension (layer) and normalize\n",
+    "    - 배치 정규화 각 차원 (레이어)에 대해 독립적으로 경험적 평균과 분산을 계산하고 정규화\n",
+    "    - 적용하고자하는 layer의 statistic(통계) 을 정규화\n",
+    "        - 진짜 뭔말이야 \n",
+    "\n",
+    "        > $\\displaystyle{\\mu{}_B \\; = \\; \\frac{1}{m}\\sum_{i=1}^{m}}x_i$  \n",
+    "        > $\\displaystyle{\\sigma{}^2_B \\; = \\; \\frac{1}{m}\\sum_{i=1}^{m}(x_i \\; - \\; \\mu{}_B)^2}$  \n",
+    "        > $\\displaystyle{\\hat{x}_i \\; = \\; \\frac{x_i \\; - \\; \\mu{}_B}{\\sqrt{\\sigma{}^2_B \\; + \\; \\epsilon{}}}}$\n",
+    "\n",
+    "        - 이 밖에도 다양한 Normalization 기법들이 있다\n",
+    "\n",
+    "            <Img src='../image/batch_normaliztion_01.jpeg' height=200>\n"
+   ]
   },
   {
    "cell_type": "code",
