--- a/05_DL Basic/DL_Basic.ipynb
+++ b/05_DL Basic/DL_Basic.ipynb
@@ -9,7 +9,10 @@
     "2. Historical DL trand review\n",
     "3. Neural Network structure (MLP)\n",
     "4. Optimization (최적화)\n",
-    "5. Gradient Descent Method"
+    "5. Gradient Descent Method\n",
+    "6. Regularization\n",
+    "7. CNN (Convolutional Neural Network)\n",
+    "8. "
    ]
   },
   {
@@ -116,7 +119,7 @@
     "        - Classification Task\n",
     "            - CE (Cross Entropy) = $\\displaystyle{-\\frac{1}{N}\\sum_{i=1}^{n}\\sum_{d=1}^{D}{y_i}^{(d)}\\log{\\hat{y}_i}^{(d)}}$\n",
     "        - Probabilistic Task\n",
-    "            - MLE (Maximum Likelihood Estimation) = $\\displaystyle{\\frac{1}{N}\\sum_{i=1}^{n}\\sum_{d=1}^{D}\\log{\\Nu{}({y_i}^{(d)}\\\\;{\\hat{y}_i}^{(d)},1)} \\quad}$ (=MSE)"
+    "            - MLE (Maximum Likelihood Estimation) = $\\displaystyle{\\frac{1}{N}\\sum_{i=1}^{n}\\sum_{d=1}^{D}\\log{N({y_i}^{(d)}\\\\;{\\hat{y}_i}^{(d)},1)} \\quad}$ (=MSE)"
    ]
   },
   {
@@ -586,7 +589,7 @@
     "    - train 단계의 학습데이터를 뽑아서 섞어주는 것\n",
     "    - 분류의 경계를 모호하게 하는것\n",
     "\n",
-    "        <img src='../image/label_smothing_01.jpeg' height=200>  <img src='../image/label_smothing_02.jpeg' height=200>\n",
+    "        <img src='../image/label_smothing_01.jpeg' width=300>  <img src='../image/label_smothing_02.jpeg' width=400>\n",
     "\n",
     "- 목적\n",
     "    - 분류문제에서 데이터가 한정적이고 더이상 데이터를 얻기 어려울때 활용하기 좋음\n",
@@ -602,7 +605,7 @@
     "- 뉴럴네트워크의 특정 노드의 웨이트를 0으로 변경하는것\n",
     "    - In each forward pass, randomly set some neurons to zero\n",
     "\n",
-    "        <img src='../image/dropout_01.jpeg' height=200>\n",
+    "        <img src='../image/dropout_01.jpeg' width=300>\n",
     "\n",
     "- 목적\n",
     "    - 각각의 뉴런들이 robustenss(견고해) 진다고 생각할 수 있다?\n",
@@ -627,7 +630,246 @@
     "\n",
     "        - 이 밖에도 다양한 Normalization 기법들이 있다\n",
     "\n",
-    "            <Img src='../image/batch_normaliztion_01.jpeg' height=200>\n"
+    "            <Img src='../image/batch_normaliztion_01.jpeg' width=500>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 07 : CNN\n",
+    "- Convolutional Neural Network ?\n",
+    "    - Convolution 의 정의\n",
+    "    - Convolution 연산 방법\n",
+    "    - Convolution 기능\n",
+    "    - Pooling layer (입력축소)\n",
+    "    - CNN 구조 : Fully connected layer (모든 노드를 연결하여 최종적인 결과를 만드는 기본적인 구조)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -01 : Convolution\n",
+    "- Continuous conoulution\n",
+    "    > $\\displaystyle{(f \\; * \\; g) \\; = \\; \\int{f(\\tau{})g(t \\; - \\; \\tau{})}d\\tau{} \\; = \\; \\int{f(t \\; - \\; \\tau{})g(t)d\\tau{}}}$\n",
+    "\n",
+    "- Discrete convolution\n",
+    "    > $\\displaystyle{(f \\; * \\; g)(t) \\; = \\; \\sum_{i=-\\infty{}}^\\infty{}{f(i)g(t \\; - \\; i)} \\; = \\; \\sum_{i=-\\infty{}}^\\infty{}{f(t \\; - \\; i)g(i)}}$\n",
+    "    \n",
+    "- 2D image convolution\n",
+    "    > $\\displaystyle{(I \\; * \\; K )(i, \\; j) \\; = \\; \\sum_m\\sum_nI(m,\\; n)K(i \\; - \\; m, \\; j \\; - \\; n) \\; = \\; \\sum_m\\sum_nI(i \\; - \\; m, \\; i \\; - \\; n)K(m,\\; n)}$  \n",
+    "        > <img src='../image/convolution_01.jpeg' width=600>\n",
+    "    \n",
+    "    - 2D convolution in action  \n",
+    "\n",
+    "        <img src='../image/convolution_02.jpeg' width=420>  <img src='../image/convolution_03.jpeg' width=350>\n",
+    "\n",
+    "    - RGB image convolution  \n",
+    "\n",
+    "        <img src='../image/convolution_04.jpeg' width=400>\n",
+    "\n",
+    "    - Stack of convolution  \n",
+    "    \n",
+    "        <img src='../image/convolution_05.jpeg' width=400>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -02 : Convolution Neutal Networks\n",
+    "\n",
+    "- CNN sonsists of convolution layer, pooling layer, and fully connected layer\n",
+    "\n",
+    "    - Convolution and pooling layers : feature extraction\n",
+    "\n",
+    "    - Fully connected layer : decision making (e.g., classification)  \n",
+    "    \n",
+    "        <img src='../image/convolution_06.jpeg' width=500>\n",
+    "<br/>\n",
+    "\n",
+    "- Fully connected layer 최소화하는 추세\n",
+    "    - 내가 학습하고자하는 파라미터의 숫자가 늘어나면 늘어날수록 학습이 어렵고 generalize performance 가 떨어지는 경향을 봉이기 때문\n",
+    "    - 같은 모델을 만들고 최대한 모델을 딥하게 동시에 파라미터 숫자를 줄이기 위해 노력함 (테크닉이 필요)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -03 : EX_01\n",
+    "\n",
+    "- Convoulution Arithmetic of GoogLeNet\n",
+    "\n",
+    "    - 직접 계산해 보자  \n",
+    "\n",
+    "        <img src='../image/convolution_07.jpeg' width=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -04 : Stride\n",
+    "\n",
+    "- 의미\n",
+    "\n",
+    "    - 넓게 걷는다\n",
+    "\n",
+    "- 정의\n",
+    "\n",
+    "    - 필터를 몇칸 간격의로 옮겨가며 Convolution 할것인지 간격에 대한 정의\n",
+    "\n",
+    "        - 필터의 크기와 stirde(간경) 을 통해 convolution 된 output 의 size 을 유추할 수 있다\n",
+    "        \n",
+    "            > $\\displaystyle{Output \\_ size \\; = \\; \\frac{(Input \\_ size \\; - Filter \\_ size)}{stride} \\; + \\; 1}$\n",
+    "\n",
+    "- 예시  \n",
+    "\n",
+    "    <img src='../image/stride_01.jpeg' width=450>  \n",
+    "\n",
+    "    - Case #1\n",
+    "        - Imput : (7,1)\n",
+    "        - filter : (3,1)\n",
+    "        - Stride : 1\n",
+    "        - Output : ((7-3)/1 + 1 , 1) = (5,1)\n",
+    "\n",
+    "    - Case #2\n",
+    "        - Imput : (7,1)\n",
+    "        - filter : (3,1)\n",
+    "        - Stride : 2\n",
+    "        - Output : ((7-3)/2 + 1,1) = (3,1)  \n",
+    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -05 : Padding\n",
+    "\n",
+    "- padding 예시  \n",
+    "\n",
+    "    <img src='../image/padding_01.jpeg' width=400>  \n",
+    "\n",
+    "- 3 x 3 convolution 일때 \n",
+    " \n",
+    "    - stride 값 과 padding 값  \n",
+    " \n",
+    "        <img src='../image/padding_02.jpeg' width=500>\n",
+    "\n",
+    "        - case #1\n",
+    "            > in : 4 x 4 x 1  \n",
+    "            > d1 : $\\displaystyle{\\frac{(4-3)}{1} \\; + \\; 1 = 2}$  \n",
+    "            > d2 : $\\displaystyle{\\frac{(4-3)}{1} \\; + \\; 1 = 2}$  \n",
+    "            > chanel : 1  \n",
+    "            >> out : 2 x 2 x 1\n",
+    "\n",
+    "        - case #2\n",
+    "            > d1 : $\\displaystyle{\\frac{7-3}{1} \\; + \\; 1 = 5}$  \n",
+    "            > d2 : $\\displaystyle{\\frac{7-3}{1} \\; + \\; 1 = 5}$  \n",
+    "            > chanel : 1\n",
+    "            >> out : 5 x 5 x 1\n",
+    "\n",
+    "        - case #3\n",
+    "            > d1 : $\\displaystyle{\\frac{5-3}{2} \\; + \\; 1 = 2}$  \n",
+    "            > d2 : $\\displaystyle{\\frac{5-3}{2} \\; + \\; 1 = 2}$  \n",
+    "            > chanel : 1\n",
+    "            >> out : 2 x 2 x 1\n",
+    "\n",
+    "        - case #4\n",
+    "            > d1 : $\\displaystyle{\\frac{7-3}{2} \\; + \\; 1 = 3}$  \n",
+    "            > d2 : $\\displaystyle{\\frac{7-3}{2} \\; + \\; 1 = 3}$  \n",
+    "            > chanel : 1\n",
+    "            >> out : 3 x 3 x 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -06 : Convolution Arthmetic\n",
+    "\n",
+    "- Padding(1), Stride(1), 3x3 kernel (filter)\n",
+    "\n",
+    "    - input : 50 x 40 x 128\n",
+    "\n",
+    "    - output : 50 x 40 x 64\n",
+    "\n",
+    "    - what's the number fo the paramethers of the this model ?\n",
+    "\n",
+    "        - fig ex.  \n",
+    "\n",
+    "            <img src='../image/convarthmetic_01.jpeg' width=450>\n",
+    "\n",
+    "                > 불가능한 모양같은데....  \n",
+    "                \n",
+    "                > 38 x 48 x 64 라고 한다면  \n",
+    "                > parameter 갯수는 3 x 3 x 128 x (채널) = 3 x 3 x 128 x 64 = 73,728\n",
+    "\n",
+    "                > 만일 40 x 50 x 64 가 맞다면\n",
+    "                > convoloution 한 filter = 1 x 1 x 128 x 64 = 8,192\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -07 : EX_02\n",
+    "\n",
+    "- What's the number of paramethers of this model?\n",
+    "\n",
+    "    <img src='../image/convarthmetic_03.jpeg' width=700>\n",
+    "\n",
+    "    > 1 step\n",
+    "    >> 11 x 11 x 3 x 48 x 2개(gpu) $\\approx{}$ 35 k  \n",
+    "\n",
+    "    > 2 step\n",
+    "    >> 5 x 5 x 48 x 128 x 2개(gpu) $\\approx{}$ 307 k  \n",
+    "\n",
+    "    > 3 step\n",
+    "    >> 3 x 3 x 128 x 2개(gpu) x 192 x 2개(gpu) $\\approx{}$ 884 k  \n",
+    "\n",
+    "    > 4 step\n",
+    "    >> 3 x 3 x 192 x x 192 x 2개(gpu) $\\approx{}$ 663 k  \n",
+    "\n",
+    "    > 5 step\n",
+    "    >> 3 x 3 x 192 x 128 x 2개(gpu) $\\approx{}$ 442 k  \n",
+    "\n",
+    "    > 6 step (dense layer)  \n",
+    "    >> 13 x 13 x 128 x 2개(gpu) x 2048 x 2개(gpu) $\\approx{}$ 177 M\n",
+    "    \n",
+    "    > 7 step (dense layer)\n",
+    "    >> 2048 x 2개(gpu) x 2048 x 2개(gpu) $\\approx{}$ 16 M  \n",
+    "\n",
+    "    > 8 step (dense layer)\n",
+    "    >> 2048 x 2개(gpu) x 1000 $\\approx{}$ 4 M\n",
+    "\n",
+    "- Parameter 의 숫자가 기하급수적으로 증가함을 확인할 수 있다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -08 : 1 x 1 Convolution\n",
+    "\n",
+    "- 목적\n",
+    "\n",
+    "    -  Dimension reduction (차원 축소)\n",
+    "\n",
+    "        - To reduce the number of parameters while incresasing the depth\n",
+    "        \n",
+    "            - ex. 256 x 256 은 유지한채 128 -> 32 로 줄이는 과정\n",
+    "            - ex. bottleneck architecture\n",
+    "\n",
+    "                <img src='../image/convolution_08.jpeg' width=300>\n",
+    "        "
    ]
   },
   {
